Se creó con Colab

--- a/Laboratorio1.ipynb
+++ b/Laboratorio1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2y6hYy/KIahAppf1wIxZC",
+      "authorship_tag": "ABX9TyOhFQ31VOrx+EwkHB6LCScO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/pereira-71/Laboratorio1/blob/main/Laboratorio1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/pereira-71/Laboratorio1\n"
+      ],
+      "metadata": {
+        "id": "UFUS8dAqGiu1"
+      }
     },
     {
       "cell_type": "markdown",
